# 30-day-uv-python-challenge

./: README.md
config/: challenge_roadmap.json
day01-smart-calculator/: BLOG.md  README.md  main.py  pyproject.toml
day01-smart-calculator/.claude/: settings.local.json
day01-smart-calculator/src/smart_calculator/: calculator.py  main.py
day01-smart-calculator/tests/: test_calculator.py
day02-web-scraper/: BLOG.md  README.md  main.py  pyproject.toml
day02-web-scraper/src/web_scraper/: __init__.py  __main__.py  main.py  news_sites.py  scraper.py
day02-web-scraper/tests/: test_scraper.py
day03-task-manager-cli/: .gitignore  README.md  main.py  pyproject.toml
day03-task-manager-cli/src/task_manager_cli/: core.py  main.py
day03-task-manager-cli/tests/: __init__.py  conftest.py  test_core.py
docs/: day01.html  day02.html  index.html
scripts/: analytics.py  challenge_manager.py  doc_generator.py  html_publisher.py
templates/cli-app/: template.py
templates/data-tool/: template.py
templates/web-app/: template.py
